--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,7 @@
         <br>
         I have a passion for Logo &amp; Brand Identity design.
     </h1>
-    <hr>
-
-    <!-- <h2>Projects</h2>
-    <hr align="left"> -->
+    <hr class="parallax">
 
     <div class="row">
     {{ range $i, $e := (where .Data.Pages "Section" "project") }}
@@ -20,7 +17,6 @@
                 <div class="media-overlay">
                     <div class="media-overlay-content">
                         <p class="media-title">{{ .Title }}</p>
-                        <p class="media-desc">{{ .Params.description }}</p>
                     </div>
                 </div>
             </a>
@@ -28,55 +24,55 @@
     {{ end }}
     </div>
 
-    <h3>Mmiscellaneous</h3>
+    <!-- <h2>Miscellaneous</h2>
     <hr class="line-no-pad">
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/cb2.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/cb1.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/lumo.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-12">
             <h4>Logo proposals (for clients of <a href="https://www.betterbrandagency.com/" class="better-link">Better</a>) during my current employment. Keep updated on new projects via <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</h4>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/mg1.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/mg2.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/mg3.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-12">
             <h4>Unused monograms for my personal rebrand. Full project coming soon.</h4>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/tofy1.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/miscommunication.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/l.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/amped-icon.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/mykri.jpg" alt="work" class="media-img project-img">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-xs-6">
             <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-12">
             <h4>Work created during my time at <a href="../project/ss17/">CCAD</a>.</h4>
         </div>
-    </div>
+    </div> -->
 </div>
 {{ partial "footer.html" . }}
