--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,13 +13,24 @@
     {{ end }}
 
     <link rel="shortcut icon" href="{{ $.Site.BaseURL }}img/favicon.ico" type="image/x-icon">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/flexboxgrid.css">
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Neuton:300" rel="stylesheet">
 
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>
+        $(document).scroll(function(){
+            var $el = $('h1');
+            var $line = $('.parallax')
+            t = (300 - $(this).scrollTop())/300;
+                if(t<0.3)t=0.3;
+                $el.css({opacity: t})
+                $line.css({opacity: t})
+        })
+    </script>
 
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -44,7 +55,7 @@
                     </a>
 
                     <p class="start-project">
-                        <a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Get in touch</a>
+                        <a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Contact</a>
                     </p>
                 </div>
             </div>
