--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,8 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Merriweather', 'Open Sans', sans-serif;
+    font-family: 'Neuton', serif;
+    /*font-family: 'FF-Din', serif;*/
     -webkit-font-smoothing: antialiased;
     color: #272727;
     background-color: #fff;
@@ -36,9 +37,20 @@ a:hover {
     color: #212121;
 }
 
+
+.logoinspo-link {
+    padding-bottom: 2px;
+    border-bottom: 1px solid;
+    color: #212121;
+}
+.logoinspo-link:hover {
+    color: #00a69c;
+}
+
+
 .wrapper {
     max-width: 1200px;
-    padding: 0 40px;
+    padding: 0 20px;
     margin: auto;
 }
 
@@ -68,7 +80,7 @@ header {
     float: right;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 20px;
+    font-size: 26px;
     line-height: 40px;
     /*text-transform: uppercase;*/
     border-bottom: 1px solid #aaa;
@@ -90,50 +102,53 @@ header {
 
 
 h1 {
-    font-size: 28px;
+    font-size: 34px;
     font-weight: 400;
     text-align: center;
     color: #212121;
-    letter-spacing: -1px;
+    /*letter-spacing: -1px;*/
     line-height: 48px;
     width: 80%;
     margin: 150px auto 0 auto;
     display: block;
+    transform: translateY(0px);
 }
     hr {
         color: #212121;
         border: none;
         width: 30px;
         border-bottom: 2px solid;
-        margin-bottom: 150px;
+        margin-bottom: 30px;
     }
+        .parallax {
+            margin-bottom: 150px;
+        }
+
     h1 a {
         padding-bottom: 2px;
         border-bottom: 1px solid;
-        color: #212121
+        color: #212121;
     }
     .better-link:hover {
         color: #E2007C;
     }
 
-h2 {
-    font-size: 22px;
+p {
+    font-size: 28px;
     text-align: center;
-    letter-spacing: -1px;
-    /*text-transform: uppercase;*/
     font-weight: 400;
     color: #212121;
     display: block;
-    margin: 120px auto 120px auto;
+    margin: 100px auto 120px auto;
     max-width: 80%;
 }
-    h2.first {
+    p.first {
         padding-top: 173px;
         margin-top: 0;
     }
 
-h3 {
-    font-size: 22px;
+h2 {
+    font-size: 30px;
     font-weight: 400;
     text-align: center;
     color: #212121;
@@ -152,7 +167,7 @@ h3 {
 
 h4 {
     color: #aaa;
-    font-size: 16px;
+    font-size: 20px;
     margin: 0 0 80px 0;
     display: block;
     /*border-top: 1px solid #aaa;*/
@@ -171,14 +186,16 @@ footer {
 
 .copyright {
     text-align: right;
-    font-size: 16px;
+    font-size: 22px;
     color: rgba(33,33,33,0.4);
-    /*text-transform: uppercase;*/
     margin-bottom: 0;
+    margin-top: 0;
+    line-height: 72px;
     display: inline-block;
     float: right;
 }
     .links {
+        font-size: 22px;
         text-align: left;
         list-style: none;
         padding: 0;
@@ -225,12 +242,15 @@ footer {
         height: 100%;
         z-index: 2;
         text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         color: #fff;
         background: #212121;
         opacity: 0;
-        -webkit-transition: opacity .2s ease-in-out;
-           -moz-transition: opacity .2s ease-in-out;
-                transition: opacity .2s ease-in-out;
+        -webkit-transition: opacity .1s ease-in-out;
+           -moz-transition: opacity .1s ease-in-out;
+                transition: opacity .1s ease-in-out;
     }
     .media-overlay:hover {
         opacity: 1;
@@ -240,12 +260,9 @@ footer {
     }
     .media-title {
         color: #fff;
-        font-size: 22px;
-        text-align: left;
-        padding-left: 30px;
-        margin-bottom: 18px;
-        margin-top: 0;
-        padding-top: 30px;
+        font-size: 30px;
+        margin: 0;
+        max-width: 100%;
     }
     .media-desc{
         color: #aaa;
@@ -265,27 +282,31 @@ footer {
         color: #212121;
         background-color: #212121;
     }
-    .media-about .media-title {
-
-    }
 
 .project-img {
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .project-banner {
     background-color: #f2f2f2;
-    background-position: center;
     background-size: cover;
+    background-position: center;
     width: 100%;
-    height: 450px;
+    height: 400px;
+    margin-bottom: 20px;
     display: inline-block;
+    background-repeat: no-repeat;
+
+    -moz-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
     .project-banner-logo {
         display: block;
         margin: auto;
         width: 180px;
-        margin-top: 135px;
+        margin-top: 110px;
     }
 
 @media only screen and (max-width : 767px) {
@@ -300,7 +321,7 @@ footer {
         }
 
     .logo-img {
-        height: 25px;
+        height: 30px;
     }
 
     .start-project {
@@ -332,20 +353,28 @@ footer {
         visibility: hidden;
     }
 
-    h2 {
-        text-align: center;
-        font-size: 16px;
+    h1 {
+        font-size: 22px;
+        margin: 100px auto 0 auto;
+        line-height: 35px;
     }
 
     hr {
-        margin: auto;
-        margin-bottom: 30px;
+        margin-bottom: 60px;
+    }
+
+    h1 br {
+        display: none;
+    }
+
+    p {
+        text-align: center;
+        font-size: 18px;
     }
 
     h3 {
         max-width: 98%;
-        font-size: 16px;
-        line-height: 25px;
+        font-size: 18px;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
