Misc page + Image optim

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
     <h1>
-        Hey, I'm Matthew, Junior Designer at
+        Hi, I'm Matthew, Junior Designer at
         <a href="https://www.betterbrandagency.com/" class="better-link">Better</a>.
         <br>
         I have a passion for Logo &amp; Brand Identity design.
@@ -23,56 +23,5 @@
         </div>
     {{ end }}
     </div>
-
-    <!-- <h2>Miscellaneous</h2>
-    <hr class="line-no-pad">
-
-    <div class="row">
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/cb2.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/cb1.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/lumo.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-12">
-            <h4>Logo proposals (for clients of <a href="https://www.betterbrandagency.com/" class="better-link">Better</a>) during my current employment. Keep updated on new projects via <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</h4>
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/mg1.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/mg2.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/mg3.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-12">
-            <h4>Unused monograms for my personal rebrand. Full project coming soon.</h4>
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/tofy1.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/miscommunication.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/l.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/amped-icon.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/mykri.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4 col-xs-6">
-            <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-12">
-            <h4>Work created during my time at <a href="../project/ss17/">CCAD</a>.</h4>
-        </div>
-    </div> -->
 </div>
 {{ partial "footer.html" . }}
