--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
     <footer>
         <ul class="links">
             <li><a href="/about">About</a></li><!--
-         --><li><a href="https://www.instagram.com/designer.matt/" target="_blank">Instagram</a></li><!--
+         --><li><a href="https://www.instagram.com/gdy.design/" target="_blank">Instagram</a></li><!--
          --><li><a href="mailto:hello@matthewgoodyear.com">Contact</a></li><!--
 
      --></ul>
