--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,15 +9,17 @@
 
     <div class="row">
     {{ range $i, $e := (where .Data.Pages "Section" "project") }}
-        <div class="col-sm-6 col-xs-12">
+        <div class="col-sm-6 col-xs-12 media-outer">
             <a class="media" href="{{ .Permalink }}">
                 <img src="{{ .Params.image }}" alt="{{ .Title }}" class="media-img">
                 <div class="media-overlay">
                     <div class="media-overlay-content">
-                        <p class="media-title">{{ .Title }}</p>
+                        <p class="media-plus">+</p>
                     </div>
                 </div>
             </a>
+            <p class="media-title">{{ .Title }}</p>
+            <p class="media-type">{{ .Type }}</p>
         </div>
     {{ end }}
     </div>
