Remove media type

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@
                 </div>
             </a>
             <p class="media-title">{{ .Title }}</p>
-            <p class="media-type">{{ .Type }}</p>
+            <!-- <p class="media-type">{{ .Type }}</p> -->
         </div>
     {{ end }}
     </div>
