--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
     <hr class="parallax">
     {{ if isset .Params "banner" }}
         <div class="project-banner" style="background-image: url({{ $.Param "banner" }});">
-            <img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
+            <span class="helper"></span><img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
         </div>
     {{ end}}
 
