--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Neuton', serif;
+    font-family: 'Helvetica', serif;
     -webkit-font-smoothing: antialiased;
     color: rgba(0, 0, 0, 1);
     background-color: #fff;
@@ -236,42 +236,33 @@ footer {
      padding-right: 10px;
  }
 
-.media {
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    display: block;
-    margin-bottom: 10px;
-}
-.media-img{
-    width: 100%;
-}
-    .media-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: rgba(255, 255, 255, 0);
-        /*opacity: 0;*/
-        background-color: rgba(0, 0, 0, 0);
-        -webkit-transition: all .15s ease-in-out;
-           -moz-transition: all .15s ease-in-out;
-                transition: all .15s ease-in-out;
-    }
-    .media-overlay:hover {
-        background-color: rgba(0, 0, 0, 1);
-        color: rgba(255, 255, 255, 1);
-        /*opacity: 1;*/
-    }
-    .media-overlay-content {
-        width: 80%;
-    }
+ .media {
+     position: relative;
+     overflow: hidden;
+     z-index: 1;
+     display: block;
+     margin-bottom: 20px;
+ }
+ .media-img{
+     width: 100%;
+     opacity: 1;
+ }
+     .media-overlay {
+         position: absolute;
+         top: 0;
+         left: 0;
+         width: 100%;
+         height: 100%;
+         z-index: 2;
+         display: flex;
+         background-size: cover;
+         background-repeat: no-repeat;
+         opacity: 0;
+     }
+     .media-overlay:hover {
+         opacity: 1;
+     }
+
     .media-title {
         color: rgba(0, 0, 0, 1);
         text-align: left;
