--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
         <ul class="links">
             <li><a href="/about">About</a></li><!--
          --><li><a href="https://www.instagram.com/gdy.design/" target="_blank">Instagram</a></li><!--
-         --><li><a href="mailto:hello@matthewgoodyear.com">Contact</a></li><!--
+         --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
 
      --></ul>
         <p class="copyright">&copy; Matthew Goodyear 2018</p>
