--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,7 +36,7 @@
             <div class="row row-center">
                 <div class="col-sm-12">
                     <a class="logo-link" href="{{ $.Site.BaseURL }}">
-                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Icon_Dark@0.5x.png" alt="Logo" class="logo-img">
+                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Icon_Black@0.5x.png" alt="Logo" class="logo-img">
 
                         <!-- <svg class="logo-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 956"><path d="M0.9 1h429.9v790.9c0 20 4 39.4 11.6 58 3.9 9.8 8.8 19.4 14.7 28.6 17.9 28.5 44.5 54.4 77.6 76.5H301.4c-71.6 0-134.2-38.2-168.6-95.3 -17.8-29.6-28.1-64.2-28.1-101.3V164.1c0-38.2-14.7-74.5-40.8-106.6C50.3 40.6 33.6 24.8 14.1 10.4L0.9 1z"/><path d="M569.5 465.7h429.9v292.7C999.5 867 911.4 955 802.7 955H673.3V628.8c0-5.9-0.4-11.7-1.1-17.5 -1.5-13.9-5.2-27.5-10.5-40.5 -6.8-17-16.8-33.3-29.2-48.6 -13.6-16.9-30.3-32.7-49.8-47.1L569.5 465.7z"/><path d="M569.5 1h266.8c90.1 0 163.1 73 163.1 163.1 0 90.2-73 163.1-163.1 163.1s-163.1-72.9-163.1-163.1c0-38.2-14.7-74.5-40.8-106.6 -13.6-16.9-30.3-32.7-49.8-47.1L569.5 1z"/></svg>
