Content Page Layout Update

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
         <p class="copyright">&copy; Matthew Goodyear 2018</p>
     </footer>
 
-    <script>
+    <!-- <script>
         (function() {
             function setOpacity(element, opacity) {
                 if (!element) return;
@@ -44,6 +44,6 @@
                 setTrans(subHeading, newTranslation)
             });
         })();
-    </script>
+    </script> -->
 </body>
 </html>
