--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,9 +67,7 @@ hr {
     margin-bottom: 30px;
 }
 .parallax {
-    margin-bottom: 150px;
-    margin-top: 20px;
-    /*margin-left: 60px;*/
+    margin-top: 10px;
 }
 
 .wrapper {
@@ -83,16 +81,12 @@ hr {
     margin: auto;
 }
 
-.main-content-wrapper {
-    max-width: 1200px;
-    margin: auto;
-}
-
 header {
     width: 100%;
     z-index: 100;
-    background-color: #fff;
+    /*background-color: #fff;*/
     padding: 40px 0;
+    /*position: absolute;*/
 }
 
 .header-container {
@@ -112,25 +106,25 @@ header {
 }
 
 p {
-    font-size: 26px;
-    line-height: 40px;
-    text-align: center;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: left;
     font-weight: 400;
     display: block;
-    margin: 100px auto 120px auto;
-    max-width: 70%;
+    margin: 0 20px 120px 20px;
+    color: #aaa;
 }
-    p.first {
+    /*p.first {
         padding-top: 173px;
         margin-top: 0;
-    }
+    }*/
 
-.first-p {
+/*.first-p {
     margin: 100px auto 50px auto;
 }
 .second-p {
     margin: 0px auto 120px auto;
-}
+}*/
 
 p a {
     color: rgba(0, 0, 0, 1);
@@ -141,7 +135,16 @@ p a:hover {
     color: #aaa;
 }
 
+.project-description {
+    text-align: left;
+    font-size: 22px;
+    margin: 5px 20px 150px 20px;
+    max-width: 100%;
+    color: black;
+}
+
 .start-project {
+    font-size: 22px;
     float: right;
     margin-top: 0;
     margin-bottom: 0;
@@ -174,6 +177,11 @@ h1 {
         color: rgba(0, 0, 0, 1);
         border-bottom: 1px solid;
     }
+
+.project-title {
+    text-align: left;
+    margin: 0 0 0 0;
+}
 
 h2 {
     font-size: 25px;
@@ -300,6 +308,7 @@ footer {
     .media-title {
         text-align: left;
         font-size: 30px;
+        line-height: 40px;
         margin: 0;
         margin-bottom: 60px;
         max-width: 100%;
@@ -324,8 +333,9 @@ footer {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 400px;
-    margin-bottom: 20px;
+    height: 60%;
+    margin-bottom: 60px;
+    margin-top: 0px;
     display: inline-block;
     background-repeat: no-repeat;
     white-space: nowrap;
@@ -446,4 +456,8 @@ vertical-align: middle;
         line-height: 26px;
         margin-bottom: 20px;
     }
+}
+
+.test:hover {
+    color: black;
 }
