--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,11 +14,11 @@
             <span class="helper"></span><img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
         </div>
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-12 col-sm-8">
                 <h1 class="project-title">{{ $.Param "title" }}</h1>
                 <hr class="parallax" align="left">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
                 <p class="project-description">{{ $.Param "description" }}</p>
             </div>
         </div>
