--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
         I'm Matthew, Junior Designer at
         <a href="https://www.betterbrandagency.com/" class="better-link" target="_blank">Better</a>.
     </h1>
-    <h2><a href="/about">More about me</a></h2>
+    <!-- <h2><a href="/about">More about me</a></h2> -->
 
     <div class="row">
     {{ range $i, $e := (where .Data.Pages "Section" "project") }}
