--- a/static/css/main.css
+++ b/static/css/main.css
@@ -284,7 +284,7 @@ footer {
        -moz-transition: all .3s;
             transition: all .3s;
 }
-.media-img:hover {
+.media-outer:hover .media-img {
     transform: scale(1.03);
 }
 
@@ -312,6 +312,10 @@ footer {
         margin: 0;
         margin-bottom: 60px;
         max-width: 100%;
+    }
+
+    .media-outer:hover .media-title {
+        color: black;
     }
 
     /*.media-type {
@@ -366,11 +370,6 @@ vertical-align: middle;
             text-align: center;
         }
 
-    .media-overlay {
-        display: none;
-        visibility: hidden;
-    }
-
     .media {
         margin-bottom: 10px;
     }
@@ -390,11 +389,22 @@ vertical-align: middle;
 
     .project-banner {
         margin-top: 68px;
-        height: 350px;
+        height: 40%;
     }
     .project-banner-logo {
         max-height: 140px;
         max-width: 250px;
+    }
+
+    .project-title {
+        text-align: center;
+    }
+
+    .project-description {
+        text-align: center;
+        margin: auto;
+        margin-bottom: 80px;
+        width: 80%;
     }
 
     footer {
@@ -423,7 +433,10 @@ vertical-align: middle;
     }
 
     .parallax {
+        display: block;
+        margin: auto;
         margin-bottom: 40px;
+        margin-top: 10px;
     }
 
     h1 br {
@@ -456,8 +469,4 @@ vertical-align: middle;
         line-height: 26px;
         margin-bottom: 20px;
     }
-}
-
-.test:hover {
-    color: black;
 }
