--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,10 +10,10 @@
             <span class="helper"></span><img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
         </div>
     {{ end}} -->
-        <div class="project-banner" style="background-image: url({{ $.Param "banner" }}); background-color: {{ $.Param "colour" }};">
+        <!-- <div class="project-banner" style="background-image: url({{ $.Param "banner" }}); background-color: {{ $.Param "colour" }};">
             <span class="helper"></span><img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
-        </div>
-        <div class="row">
+        </div> -->
+        <!-- <div class="row">
             <div class="col-xs-12 col-sm-8">
                 <h1 class="project-title">{{ $.Param "title" }}</h1>
                 <hr class="parallax" align="left">
@@ -21,7 +21,17 @@
             <div class="col-xs-12 col-sm-4">
                 <p class="project-description">{{ $.Param "description" }}</p>
             </div>
-        </div>
+        </div> -->
+        <!-- <div class="row">
+            <div class="col-xs-8">
+                <img src="{{ .Params.banner }}" alt="work" class="project-img">
+            </div>
+            <div class="col-xs-4">
+                <h2>{{ $.Param "title" }}</h2>
+                <p class="project-description">{{ $.Param "description" }}</p>
+            </div>
+        </div> -->
+
         {{ .Content }}
 </div>
 
