--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,6 +27,7 @@ body {
     -webkit-font-smoothing: antialiased;
     color: rgba(0, 0, 0, 1);
     background-color: #fff;
+    font-weight: 100;
 }
 
 ::-moz-selection { background-color: black; color: white; }
@@ -114,17 +115,6 @@ p {
     margin: 0 20px 120px 20px;
     color: #aaa;
 }
-    /*p.first {
-        padding-top: 173px;
-        margin-top: 0;
-    }*/
-
-/*.first-p {
-    margin: 100px auto 50px auto;
-}
-.second-p {
-    margin: 0px auto 120px auto;
-}*/
 
 p a {
     color: rgba(0, 0, 0, 1);
@@ -137,10 +127,11 @@ p a:hover {
 
 .project-description {
     text-align: left;
+    color: #aaa;
     font-size: 22px;
-    margin: 5px 20px 150px 20px;
-    max-width: 100%;
-    color: black;
+    line-height: 26px;
+    margin: 0 20px 0 20px;
+    max-width: 90%;
 }
 
 .start-project {
@@ -164,7 +155,7 @@ h1 {
     text-align: center;
     line-height: 54px;
     /*width: 85%;*/
-    margin: 150px auto 0 auto;
+    margin: 150px auto 150px auto;
     display: block;
     transform: translateY(0px);
     letter-spacing: -1;
@@ -184,15 +175,13 @@ h1 {
 }
 
 h2 {
-    font-size: 25px;
-    font-weight: 400;
-    text-align: center;
-    color: #aaa;
-    line-height: 48px;
-    width: 85%;
-    margin: 15px auto 150px auto;
-    display: block;
+    font-size: 32px;
+    font-weight: 100;
+    text-align: left;
+    line-height: 34px;
+    margin: 0 10px 20px 20px;
     transform: translateY(0px);
+    letter-spacing: -1;
 }
     h2 a {
         border-bottom: 1px solid rgba(0, 0, 0, 0);
@@ -277,6 +266,11 @@ footer {
     display: block;
     margin-bottom: 15px;
  }
+
+.media-outer {
+    margin-bottom: 40px;
+}
+
 .media-img{
     width: 100%;
     opacity: 1;
@@ -310,7 +304,6 @@ footer {
         font-size: 30px;
         line-height: 40px;
         margin: 0;
-        margin-bottom: 60px;
         max-width: 100%;
     }
 
@@ -333,7 +326,6 @@ footer {
 }
 
 .project-banner {
-    background-color: #f2f2f2;
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -370,7 +362,7 @@ vertical-align: middle;
             text-align: center;
         }
 
-    .media {
+    .media-outer {
         margin-bottom: 10px;
     }
 
@@ -378,8 +370,8 @@ vertical-align: middle;
         padding: 0 15px;
     }
 
-    .col-xs-6 {
-        padding: 5px;
+    .col-sm-8 {
+        margin: auto 10px auto 10px;
     }
 
     .start-project {
@@ -400,13 +392,6 @@ vertical-align: middle;
         text-align: center;
     }
 
-    .project-description {
-        text-align: center;
-        margin: auto;
-        margin-bottom: 80px;
-        width: 80%;
-    }
-
     footer {
         text-align: center;
     }
@@ -423,13 +408,18 @@ vertical-align: middle;
 
     h1 {
         font-size: 32px;
-        margin: 80px auto 0 auto;
+        margin: 80px auto 80px auto;
+        width: 80%;
         line-height: 35px;
     }
 
     h2 {
-        font-size: 22px;
+        font-size: 30px;
+        margin-left: 10px;
+    }
+    .project-description {
         margin-bottom: 80px;
+        margin-left: 10px;
     }
 
     .parallax {
